# Optimization_Data_Structure

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  run.sh  testRun.sh
c/include/: baseFunction.h  matrix.h  ods.h  optimizationFunction.h
c/src/: baseFunction.c  matrix.c  ods.c  optimizationFunction.c
cpp/: README.md  build.sh  run.sh
cpp/include/: baseFunction.h  csvWriter.h  dataset.h  optimizationAlgorithm.h  testDataset.h  timer.h
cpp/src/: analyze.py  csvWriter.cpp  main.cpp  matrix.cpp  optimizationAlgorithm.cpp  testDataset.cpp  timer.cpp
include/: baseFunction.h  csvWriter.h  dataset.h  funcRunner.h  funcs2D.h  funcsND.h  matrix.h  optimizationAlgorithm.h  parameters.h  testDataset.h  timer.h
parameters/: dataset.txt  optimization_algorithm.txt
src/: analyze.py  baseFunction.cpp  csvWriter.cpp  dataset.cpp  funcRunner.cpp  funcs2D.cpp  funcsND.cpp  main.cpp  matrix.cpp  optimizationAlgorithm.cpp  parameters.cpp  testDataset.cpp  timer.cpp
